@@ -50,7 +50,8 @@ import org.bandahealth.idempiere.graphql.dataloader.impl.MAuthorizationProviderD
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHBPGeneralPayerInfoDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHBPPayerInfoDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHBPSpecificPayerInfoDataLoader;
-import org.bandahealth.idempiere.graphql.dataloader.impl.MBHClientConceptExtraDataLoader;
+import org.bandahealth.idempiere.graphql.dataloader.impl.MBHCodedDiagnosisDataLoader;
+import org.bandahealth.idempiere.graphql.dataloader.impl.MBHCodedDiagnosisMappingDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHConceptDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHConceptDescriptionDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHConceptExtraDataLoader;
@@ -818,6 +819,7 @@ import org.bandahealth.idempiere.graphql.dataloader.impl.X_T_ReportStatementData
 import org.bandahealth.idempiere.graphql.dataloader.impl.X_T_TransactionDataLoader;
 import org.dataloader.DataLoaderRegistry;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 
@@ -836,7 +838,7 @@ public class BandaDataLoaderComposer {
 	 * in hot-swapping in development without having to restart iDempiere
 	 */
 	public BandaDataLoaderComposer() {
-		dataLoaders = List.of(
+		dataLoaders = Arrays.asList(
 				new M_ElementDataLoader(),
 				new M_RegistrationDataLoader(),
 				new MAccessLogDataLoader(),
@@ -897,7 +899,8 @@ public class BandaDataLoaderComposer {
 				new MBHBPGeneralPayerInfoDataLoader(),
 				new MBHBPPayerInfoDataLoader(),
 				new MBHBPSpecificPayerInfoDataLoader(),
-				new MBHClientConceptExtraDataLoader(),
+				new MBHCodedDiagnosisDataLoader(),
+				new MBHCodedDiagnosisMappingDataLoader(),
 				new MBHConceptDataLoader(),
 				new MBHConceptDescriptionDataLoader(),
 				new MBHConceptExtraDataLoader(),
